# fabric-pytester

./: .gitignore  LICENSE  README.md  README_INTEGRATIONS_AND_CI.md  README_QUICKSTART.md  README_USAGE_GUIDE.md  pyproject.toml
examples/: conftest.py  dataverse_destination.py  fabric-pytester.toml  rest_destination.py  sql_destination.py
examples/example_project/: README.md  conftest.py  fabric-pytester.complete.example.toml  fabric-pytester.toml  pyproject.toml
examples/example_project/tests/destinations/: dataverse.py
examples/example_project/tests/fabric/: test_orders_pipeline.py  test_returns_pipeline.py
examples/example_project/tests/fabric/scenarios/: orders_dataverse_to_fabric.json  returns_dataverse_to_fabric.json
examples/scenarios/: orders_ingestion.json
fabric_pytester/: __init__.py
fabric_pytester/adapters/: __init__.py  jdbc.py  jdbc_token.py  mssql_python.py  pyodbc.py
fabric_pytester/core/: __init__.py  assertions.py  cleanup.py  config.py  credentials.py  destinations.py  errors.py  fabric_jobs.py  http.py  logging.py  onelake_client.py  renderer.py  runner.py  scenario_loader.py  sql_backend.py  tokens.py
fabric_pytester/fixtures/: __init__.py  plugin.py
fabric_pytester/schema/: scenario.schema.json
scripts/: bump-version.ps1  check-build.ps1  upload-pypi.ps1  upload-testpypi.ps1
tests/: test_adapters.py  test_assertions.py  test_config_credentials.py  test_http_tokens_fabric.py  test_onelake_client.py  test_package_metadata.py  test_plugin.py  test_renderer.py  test_scenarios_runner.py  test_sql_backends.py  test_tokens.py
